-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-06-16T00:58:30.507Z

CREATE TABLE "comunidade" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar(255) NOT NULL,
  "descricao" varchar(255),
  "logo_url" varchar(255) NOT NULL,
  "telefone" varchar(255),
  "link_instagram" varchar(255),
  "link_linkedin" varchar(255),
  "link_website" varchar(255),
  "link_github" varchar(255),
  "ativo" boolean DEFAULT true,
  "atualizado_em" timestamp,
  "criado_em" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "usuario" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_comunidade" bigint,
  "email" varchar(255) UNIQUE NOT NULL,
  "senha" varchar(255) NOT NULL,
  "funcao" varchar(255) NOT NULL,
  "usuario_root" boolean DEFAULT false,
  "ativo" boolean DEFAULT true,
  "atualizado_em" timestamp,
  "criado_em" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "evento" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_comunidade" bigint NOT NULL,
  "titulo" varchar(255) NOT NULL,
  "capa_url" varchar(255) NOT NULL,
  "descricao" varchar(255) NOT NULL,
  "data_hora_inicial" timestamp NOT NULL,
  "data_hora_final" timestamp NOT NULL,
  "endereco" varchar(255),
  "cidade" varchar(255),
  "estado" varchar(255),
  "cep" varchar(255),
  "link" varchar(255),
  "evento_online" boolean DEFAULT false,
  "ativo" boolean DEFAULT true,
  "atualizado_em" timestamp,
  "criado_em" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "post" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_comunidade" bigint NOT NULL,
  "texto" varchar(255) NOT NULL,
  "ativo" boolean DEFAULT true,
  "atualizado_em" timestamp,
  "criado_em" timestamp NOT NULL DEFAULT (now())
);

ALTER TABLE "usuario" ADD FOREIGN KEY ("id_comunidade") REFERENCES "comunidade" ("id");

ALTER TABLE "evento" ADD FOREIGN KEY ("id_comunidade") REFERENCES "comunidade" ("id");

ALTER TABLE "post" ADD FOREIGN KEY ("id_comunidade") REFERENCES "comunidade" ("id");
