Table comunidade {
  id bigint [pk, increment]
  nome varchar(255) [not null]
  descricao varchar(255) [null]
  logo_url varchar(255) [not null]
  telefone varchar(255) [null]
  link_instagram varchar(255) [null]
  link_linkedin varchar(255) [null]
  link_website varchar(255) [null]
  link_github varchar(255) [null]
  ativo boolean [default: true]
  atualizado_em timestamp [null]
  criado_em timestamp [default: `now()`, not null]
}

Table usuario {
  id bigint [pk, increment]
  id_comunidade bigint [ref: > comunidade.id, null]
  email varchar(255) [unique, not null]
  senha varchar(255) [not null]
  funcao varchar(255) [not null]
  usuario_root boolean [default: false]
  ativo boolean [default: true]
  atualizado_em timestamp [null]
  criado_em timestamp [default: `now()`, not null]
}

Table evento {
  id bigint [pk, increment]
  id_comunidade bigint [ref: > comunidade.id, not null]
  titulo varchar(255) [not null]
  capa_url varchar(255) [not null]
  descricao varchar(255) [not null]
  data_hora_inicial timestamp [not null]
  data_hora_final timestamp [not null]
  endereco varchar(255) [null]
  cidade varchar(255) [null]
  estado varchar(255) [null]
  cep varchar(255) [null]
  link varchar(255) [null]
  evento_online boolean [default: false]
  ativo boolean [default: true]
  atualizado_em timestamp [null]
  criado_em timestamp [default: `now()`, not null]
}

Table post {
  id bigint [pk, increment]
  id_comunidade bigint [ref: > comunidade.id, not null]
  texto varchar(255) [not null]
  ativo boolean [default: true]
  atualizado_em timestamp [null]
  criado_em timestamp [default: `now()`, not null]
}
